# intelligence-query-gateway

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md
docs/design-history/: semantic-router-gateway-2026-01-21.md
docs/development/: setup.md  testing.md
docs/operations/: deployment.md  monitoring.md  runbook.md
docs/testing/: architecture.md
monitoring/: README.md
monitoring/grafana/dashboards/: model-training.json  query-gateway-overview.json
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: docker-entrypoint.sh  train_router.py  upload_model_to_hub.py  verify_monitoring.sh
scripts/training/: __init__.py  metrics.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py  schemas.py
src/api/routes/: __init__.py  classify.py  health.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
src/models/: __init__.py  semantic_router.py
src/services/: __init__.py  batching.py  cache.py  classifier.py
src/utils/: __init__.py  hashing.py  model_downloader.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_batching_integration.py  test_cache_integration.py  test_classifier_service.py
tests/load/: README.md  __init__.py  locustfile.py  run_tests.sh
tests/load/reports/: README.md
tests/load/scenarios/: __init__.py  baseline.py  batch_test.py  cache_test.py  stress_test.py
tests/load/utils/: __init__.py  data_generator.py  metrics_collector.py
tests/unit/: __init__.py  conftest.py
tests/unit/api/: __init__.py  test_schemas.py
tests/unit/core/: __init__.py  test_config.py  test_exceptions.py
tests/unit/models/: __init__.py
(+7 files in other folders)
